tests/errors/float1.f90
program float1
real :: y
print *, float(y)
end program
